# ecs36b-testing-assignment-starter

./: CMakeLists.txt  prompt.md  writeup.md
src/: CMakeLists.txt  formatting.cpp  formatting.h  main.cpp  sorting.cpp
testing/: CMakeLists.txt  test_copy_array.cpp  test_get_sorted.cpp  test_helpers.cpp  test_helpers.h  test_make_sorted.cpp  test_min_index_of_array.cpp  test_parse_args.cpp  test_swap.cpp
